Cambio hp04.html

--- a/hp04.html
+++ b/hp04.html
@@ -5,5 +5,7 @@
  <body>
 <h1>Harry Porlotes y El Malware de Fuego</h1>
 <p>Un importante hackaton se celebra en el instituto y el portátil de un compañero de Harry, se avería debido a un ataque de Ransomwaremort, perdiendo así toda la saga Crepúsculo en epub que tenía guardada y las revistas de Marie-Claire de su abuela en PDF.</p>
+ <p>Pero recuerda tras unos minutos de tristeza que es un mago inteligente y hace un hechizo para 
+   arreglar el portátil y así no darle una gran decepción a su abuelita.</p>
  </body>
 </html>
